# death-stranding-poc

./: .gitignore  Cargo.toml  README.md  index.html  package.json  styles.css
.github/: pull_request_template.md
.github/workflows/: deploy.yml  test.yml
.junie/: guidelines.md
.junie/memory/: feedback.md
css/: styles.css
data/: deliveries.json  delivery_categories.json  districts.json  locations.json  orders.json  users.json
docs/: description.md  feedback.md  manual-admin.md  manual-user.md  tasks.md
docs/schemas/: README.md  delivery.schema.json  delivery_category.schema.json  district.schema.json  location.schema.json  order.schema.json  user.schema.json
docs/schemas/examples/: delivery_categories.json  districts.json
js/: death_stranding_poc.js
src/: lib.rs  models.rs  services.rs  tests.rs
tests/: data_deser.rs  filtering.rs  services_more.rs  validation.rs  wasm.rs
tests_js/: dashboard.test.js  delivery.test.js  filtering.test.js  import.test.js  logic.test.js  order.test.js  setup.js  status.test.js  validation.test.js
